added basic auth to adonis backend and openapi definition (#21)
