# demo-application/start/routes.ts
@@ -23,6 +23,14 @@ router.get('/', async () => {
 })
 
 router
+  .get('/basicauth', async () => {
+    return {
+      hello: 'world',
+    }
+  })
+  .use(middleware.auth({ guards: ['basicAuth'] }))
+
+router
   .group(() => {
     /**
      * All routes registered inside the callback
